Update and rename 2019-11-08-follow-development.md to 2019-11-08-about.md

--- a/_posts/2019-11-08-about.md
+++ b/_posts/2019-11-08-about.md
@@ -7,7 +7,7 @@ title:  About
 
 I've wanted to design a bluetooth mech keeb for a while; wasn't sure how realistic it would be. Figured a 1 key prototype would be a good jumping off point. Still has a lot of work to be done, but it works.
 
-## Features
+### Features
 
 - USB C
 - BLE 5.0
@@ -16,7 +16,7 @@ I've wanted to design a bluetooth mech keeb for a while; wasn't sure how realist
 - Kailh Gold Speed switch
 - ffffff
 
-## Follow Development
+### Follow Development
 
 
 Subscribe to follow development: 
@@ -39,6 +39,6 @@ Subscribe to follow development:
 </div>
 
 
-## Roadmap
+### Roadmap
 
 - TBD
