Move posts to own section

--- a/_posts/2019-11-08-test2.md
+++ b/_posts/2019-11-08-test2.md
@@ -1,10 +1,10 @@
 ---
 layout: post
-title: Pay Respect
+title: Pay Respectsss
 categories: [prototype]
-image: /images/tty_respect.jpg
 ---
 
+<div class="header-image-container"><img src="/images/tty_respect.jpg" /></div>
 
 I've wanted to design a bluetooth mech keeb for a while; wasn't sure how realistic it would be. Figured a 1 key prototype would be a good jumping off point. Still has a lot of work to be done, but it works.
 
