--- a/404.md
+++ b/404.md
@@ -4,6 +4,8 @@ title: 404 - Page not found
 permalink: /404
 ---
 
-Sorry, we can't find that page that you're looking for. You can try again by going [back to the homepage]({{ site.baseurl }}/).
+[<img src="{{ site.baseurl }}{{ site.avatar }}" alt="Unicorn by https://twitter.com/ninalimpi" class="four-oh-four" />]({{ site.baseurl }}/)
 
-[<img src="{{ site.baseurl }}/images/404.jpg" alt="Constructocat by https://github.com/jasoncostello" style="width: 400px;"/>]({{ site.baseurl }}/)
+### These are not the keyboards you are looking for, [move along]({{ site.baseurl }}/).
+
+
